samples/_failures_safe/1761497637_425a61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b182136.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_5b182136.c:150:29: error: expected ‘)’ at end of input
  150 |         if (is_operator_char
      |            ~                ^
      |                             )
./samples/SAFE/__tmp_5b182136.c:150:9: error: expected declaration or statement at end of input
  150 |         if (is_operator_char
      |         ^~
./samples/SAFE/__tmp_5b182136.c:150:9: error: expected declaration or statement at end of input
